# torch

./: .gitignore  README.md
src/custom_operator/: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md  justfile  pyproject.toml  setup.py
src/custom_operator/cmake/: format.cmake
src/custom_operator/src/custom_operator/: __init__.py
